{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 57,
  "lineage": "e8232c1e-9b0c-e957-7ba9-6d7c8a19a432",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudrock-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c040d7f64bbdddb",
            "domain": "vpc",
            "id": "eipalloc-06c040d7f64bbdddb",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-169-32-51.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.32.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudrock-eip"
            },
            "tags_all": {
              "Name": "cloudrock-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:internet-gateway/igw-034641e3a49586a05",
            "id": "igw-034641e3a49586a05",
            "owner_id": "520131775371",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c040d7f64bbdddb",
            "association_id": "eipassoc-0f661d7ecd6363479",
            "connectivity_type": "public",
            "id": "nat-0157bfaba32639b35",
            "network_interface_id": "eni-0b22aef1ab8a3532d",
            "private_ip": "10.0.1.204",
            "public_ip": "18.169.32.51",
            "subnet_id": "subnet-0a2d9305a7f7d145b",
            "tags": {
              "Name": "prod-nat-gateway"
            },
            "tags_all": {
              "Name": "prod-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.cloudrock-eip",
            "aws_subnet.prod-pub-sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034641e3a49586a05",
            "id": "r-rtb-0f7852d316e9b70061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7852d316e9b7006",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-pub-route-table",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:route-table/rtb-01ca7eeb2f814d00a",
            "id": "rtb-01ca7eeb2f814d00a",
            "owner_id": "520131775371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0157bfaba32639b35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cloudrock-eip",
            "aws_nat_gateway.prod-nat-gateway",
            "aws_subnet.prod-pub-sub1",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:route-table/rtb-07bf41ff5e62be025",
            "id": "rtb-07bf41ff5e62be025",
            "owner_id": "520131775371",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-priv-route-table"
            },
            "tags_all": {
              "Name": "prod-priv-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:route-table/rtb-0f7852d316e9b7006",
            "id": "rtb-0f7852d316e9b7006",
            "owner_id": "520131775371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034641e3a49586a05",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-pub-route-table"
            },
            "tags_all": {
              "Name": "prod-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-priv-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034685157e3d636da",
            "route_table_id": "rtb-07bf41ff5e62be025",
            "subnet_id": "subnet-04a3ef93320523567"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.prod-priv-sub1",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-priv-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08337fd060af5ea28",
            "route_table_id": "rtb-07bf41ff5e62be025",
            "subnet_id": "subnet-068870d299b97cdce"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.prod-priv-sub2",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-pub-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0425ee44527f069a8",
            "route_table_id": "rtb-0f7852d316e9b7006",
            "subnet_id": "subnet-0a2d9305a7f7d145b"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.prod-pub-sub1",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-pub-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f93b64ce11b869e7",
            "route_table_id": "rtb-0f7852d316e9b7006",
            "subnet_id": "subnet-0b8dfbddeece4c31f"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.prod-pub-sub2",
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:subnet/subnet-04a3ef93320523567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a3ef93320523567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520131775371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-priv-sub1"
            },
            "tags_all": {
              "Name": "prod-priv-sub1"
            },
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:subnet/subnet-068870d299b97cdce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068870d299b97cdce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520131775371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-priv-sub2"
            },
            "tags_all": {
              "Name": "prod-priv-sub2"
            },
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:subnet/subnet-0a2d9305a7f7d145b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2d9305a7f7d145b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520131775371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pub-sub1"
            },
            "tags_all": {
              "Name": "prod-pub-sub1"
            },
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:subnet/subnet-0b8dfbddeece4c31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8dfbddeece4c31f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520131775371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pub-sub2"
            },
            "tags_all": {
              "Name": "prod-pub-sub2"
            },
            "vpc_id": "vpc-012f0d80cf4d00e79"
          },
          "dependencies": [
            "aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudrock-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:520131775371:vpc/vpc-012f0d80cf4d00e79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6f37fae98ebc739",
            "default_route_table_id": "rtb-05f610d91580782d3",
            "default_security_group_id": "sg-020e915b2d90bf740",
            "dhcp_options_id": "dopt-0f7291617432c7554",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012f0d80cf4d00e79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f610d91580782d3",
            "owner_id": "520131775371",
            "tags": {
              "Name": "cloudrock-vpc"
            },
            "tags_all": {
              "Name": "cloudrock-vpc"
            }
          }
        }
      ]
    }
  ]
}